--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <script src="https://kit.fontawesome.com/833af7409e.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" class="mb-5">
@@ -22,17 +25,22 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
-              <!-- <ul class="navbar-nav ml-auto">
+              <!-- <i class="fab fa-linkedin">
+                <a href="https://www.linkedin.com/in/marquezbrown/"> Marquez Brown
+               </a>
+             </i> -->
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="./contact.html">Contact <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="https://docs.google.com/document/d/1eRrjjDQScExwS2WzK1caM5bmAgRLVrSd1w5-YpaJBys/edit?usp=sharing">Resume</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                  <a class="nav-link fab fa-linkedin" href="https://www.linkedin.com/in/marquezbrown/">Marquez Brown <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                
+                <!-- <li class="nav-item active">
                   <a class="nav-link" href="./index.html">About</a>
-                </li>
-              </ul> -->
+                </li> -->
+              </ul>
             </div>
           </nav>
           <main>
