added new project to portfolio

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                                 <!-- img row -->
                                 <div class="row">
                                 <div class="col-md-12">
-                                  <a href="https://marquez-brown.github.io/DailyPlanner/">
-                                  <img src="./Images/DailyPlanner.png" alt="DailyPlanner" class="thumbnail mr-3 mb-4">
+                                  <a href="https://evening-headland-02577.herokuapp.com">
+                                  <img src="./Images/wavelength.png" alt="DailyPlanner" class="thumbnail mr-3 mb-4">
                                 </a>
                                 <a href="https://pkriengsiri.github.io/whats-in-the-box/">
                                   <img src="./Images/whatsinthebox.png" alt="Refa" class="thumbnail mr-3 mb-4">
